# node-wire

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Setup.md  docker-compose.mcp.yml  pyproject.toml  sample.env
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  github-release.yml  lint.yml  publish.yml  pytest.yml  secret-scan.yml
config/: connectors.yaml
docker/fhir-cerner/: Dockerfile
docker/fhir-epic/: Dockerfile
docker/google-drive/: Dockerfile
docker/smtp/: Dockerfile
docker/stripe/: Dockerfile
docs/: code-quality-compliance.md  connectors.md  google_drive_connector.md  local-packages-to-images.md  mcp-servers.md  packaging.md  quality-security-gates.md  release-rollback.md  toolhive_agent_scenario.md
docs/images/: nw-favicon-black.png.license
grafana/: Connector Logs & Status - Updated-1773917850709.json  docker-compose.yml
playground/: README.md  app.js  index.html  scenario_post_visit.py  scenarios.py  style.css
scripts/: build-mcp-images.sh
src/: bindings_entrypoint.py
src/agents/: README.md  fhir_cerner_mcp.py  fhir_epic_mcp.py  google_drive_mcp.py  llm_factory.py  mcp_entrypoint.py  smtp_mcp.py  stripe_mcp.py  toolhive.py
src/agents/providers/: anthropic_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py
src/bindings/: __init__.py  factory.py
src/bindings/grpc_server/: auth.py  connector.proto  server.py
src/bindings/mcp_server/: server.py
src/bindings/rest_api/: app.py  auth.py
src/connectors/: manifest.py
src/connectors/fhir_cerner/: logic.py
src/connectors/google_drive/: README.md  action_spec.py  logic.py  schema.py
src/node_wire_fhir_cerner/: logic.py  schema.py
src/node_wire_fhir_epic/: logic.py  registration.py  schema.py
src/node_wire_google_drive/: action_spec.py  logic.py  schema.py
src/node_wire_http_generic/: logic.py  registration.py  schema.py
src/node_wire_runtime/: __init__.py  base_connector.py  connectors.yaml.sample  errors.py  manifest.py  mcp_contract.py  mcp_normalizers.py  models.py  observability.py  rate_limit.py  resilience.py  streaming.py
src/node_wire_runtime/auth/: __init__.py  base.py  no_auth.py  oauth2.py  service_account.py  static_token.py
src/node_wire_slack/: README.md  logic.py  schema.py
src/node_wire_smtp/: logic.py  registration.py  schema.py
src/node_wire_stripe/: README.md  logic.py  registration.py  schema.py
src/runtime/: __init__.py  sdk_action_spec.py  sdk_connector.py
tests/: conftest.py  test_aot_runtime_basic.py  test_auth_providers.py  test_base_connector_manifest.py  test_connector_registry.py  test_connectors_basic.py  test_connectors_io.py  test_entrypoints.py  test_factory_and_rest.py  test_fhir_cerner.py  test_fhir_epic.py  test_google_drive.py  test_google_drive_action_spec.py  test_llm_providers.py  test_mcp_transport.py  test_observability.py  test_scope_policy_transport.py  test_secrets_env.py  test_slack_connector.py  test_stripe.py  test_toolhive_agent.py  test_toolhive_client.py
tests/playground/: home_page.py  test_playground_integration.py  utils.py
tests/playground/gdrive/: conftest.py  test_gdrive_integration.py
tests/playground/salesforce/: conftest.py  helpers.py  test_salesforce_integration.py
tests/playground/slack/: README.md  conftest.py  slack_page.py  test_slack_integration.py
tests/playground/stripe/: README.md  conftest.py  stripe_page.py  test_stripe_integration.py
