[project]
name = "node-wire"
version = "0.1.0"
description = "Node Wire — runtime, connectors, and bindings"
requires-python = ">=3.11"
authors = [
  { name = "AOT", email = "dev@aot.local" },
]
readme = "README.md"

dependencies = [
  "pydantic>=2.6.0,<3.0.0",
  "tenacity>=8.2.0",
  "pybreaker>=1.0.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "grpcio>=1.62.0",
  "grpcio-tools>=1.62.0",
  "aiosmtplib>=3.0.1",
  "httpx[http2]>=0.27.0,<0.28.0",
  "pyyaml>=6.0.1",
  "stripe>=10.0.0",
  "email-validator>=2.0.0",
  "google-auth>=2.0.0",
  "google-api-python-client>=2.100.0",
  "PyJWT[crypto]>=2.8.0",
  "python-dotenv>=1.0.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "traceloop-sdk>=0.53.0",
]

[project.scripts]
node-wire = "bindings_entrypoint:main"
nw-google-drive = "agents.google_drive_mcp:main"
nw-smartonfhir-epic = "agents.fhir_epic_mcp:main"
nw-smartonfhir-cerner = "agents.fhir_cerner_mcp:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
agents = [
  "mcp>=1.6.0",                    # Official Python MCP SDK (includes FastMCP)
  "groq>=0.9.0",                   # Groq LLM SDK
  "openai>=1.30.0",                # OpenAI SDK
  "google-generativeai>=0.7.0",    # Gemini SDK
  "anthropic>=0.28.0",             # Claude SDK
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

