[project]
name = "node-wire"
version = "0.1.0"
description = "Node Wire — runtime, connectors, and bindings"
requires-python = ">=3.11"
authors = [
  { name = "AOT", email = "dev@aot.local" },
]
readme = "README.md"

dependencies = [
  "pydantic>=2.6.0,<3.0.0",
  "tenacity>=8.2.0",
  "pybreaker>=1.0.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "grpcio>=1.62.0",
  "grpcio-tools>=1.62.0",
  "aiosmtplib>=3.0.1",
  "httpx[http2]>=0.27.0,<0.28.0",
  "pyyaml>=6.0.1",
  "stripe>=10.0.0",
  "email-validator>=2.0.0",
  "google-auth>=2.0.0",
  "google-api-python-client>=2.100.0",
  "PyJWT[crypto]>=2.8.0",
  "python-dotenv>=1.0.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "traceloop-sdk>=0.53.0",
]

[project.scripts]
node-wire = "bindings_entrypoint:main"
nw-google-drive = "agents.google_drive_mcp:main"
nw-smartonfhir-epic = "agents.fhir_epic_mcp:main"
nw-smartonfhir-cerner = "agents.fhir_cerner_mcp:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.3.5",
  "mypy>=1.9.0",
  "pre-commit>=3.7.0",
]
agents = [
  "mcp>=1.6.0",                    # Official Python MCP SDK (includes FastMCP)
  "groq>=0.9.0",                   # Groq LLM SDK
  "openai>=1.30.0",                # OpenAI SDK
  "google-generativeai>=0.7.0",    # Gemini SDK
  "anthropic>=0.28.0",             # Claude SDK
]

# Development entry points — register all connectors so auto_register() works
# in the dev editable install (pip install -e .).
# Each published connector package also declares its own entry point in its
# packages/connectors/{name}/pyproject.toml.
[project.entry-points."node_wire.connectors"]
http_generic = "node_wire_http_generic.logic"
smtp         = "node_wire_smtp.logic"
stripe       = "node_wire_stripe.logic"
google_drive = "node_wire_google_drive.logic"
fhir_epic    = "node_wire_fhir_epic.logic"
fhir_cerner  = "node_wire_fhir_cerner.logic"
salesforce   = "node_wire_salesforce.logic"
slack        = "node_wire_slack.logic"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
omit = [
  "*/__pycache__/*",
  "*/node_wire.egg-info/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
